# abstract_chearmyp_node

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md
.husky/: pre-commit
src/: abstract_attacher_collection.rs  abstract_node.rs  abstract_node_queue.rs  dynamic_abstract_node.rs  lib.rs  node_kind.rs  specific_abstract_nodes.rs
src/abstract_attacher_collection/: vec_deque.rs
src/abstract_node/: simple_abstract_node.rs
src/abstract_node_queue/: vec_deque.rs
src/dynamic_abstract_node/: abstract_attacher_node.rs  abstract_block_comment_node.rs  abstract_block_othertongue_node.rs  abstract_complex_node.rs  abstract_line_comment_node.rs  abstract_line_othertongue_node.rs  abstract_simplex_node.rs
src/specific_abstract_nodes/: abstract_attacher_node.rs  abstract_block_comment_node.rs  abstract_block_othertongue_node.rs  abstract_complex_node.rs  abstract_line_comment_node.rs  abstract_line_othertongue_node.rs  abstract_simplex_node.rs
