[package]
name = "abstract_chearmyp_node"
version = "0.1.0-dev"
authors = ["Kenneth Trecy Tobias <web.kennethtobias@gmail.com>"]
edition = "2021"

[dependencies.abstract_chearmyp_source]
git = "http://chearmyp.local/abstract_chearmyp_source"
tag = "v0.4.0"

[dev-dependencies.abstract_chearmyp_source]
git = "http://chearmyp.local/abstract_chearmyp_source"
tag = "v0.4.0"
features = ["str_source", "vec_source_collection"]

[features]
default = []
no_std = []
