[package]
name = "abstract_chearmyp_node"
version = "0.1.0-dev"
authors = ["Kenneth Trecy Tobias <web.kennethtobias@gmail.com>"]
edition = "2021"

[dependencies.abstract_chearmyp_boundary]
git = "https://github.com/KennethTrecy/abstract_chearmyp_boundary"
tag = "v0.1.3"

[dev-dependencies.abstract_chearmyp_boundary]
git = "https://github.com/KennethTrecy/abstract_chearmyp_boundary"
tag = "v0.1.3"

[features]
default = []
no_std = []
