[package]
name = "abstract_chearmyp_node"
version = "0.2.1"
authors = ["Kenneth Trecy Tobias <web.kennethtobias@gmail.com>"]
edition = "2021"

[dependencies.abstract_chearmyp_boundary]
git = "https://github.com/KennethTrecy/abstract_chearmyp_boundary"
tag = "v0.2.0"

[dev-dependencies.abstract_chearmyp_boundary]
git = "https://github.com/KennethTrecy/abstract_chearmyp_boundary"
tag = "v0.2.0"
features = ["range_boundary", "vec_boundary_collection"]

[features]
default = []
no_std = ["abstract_chearmyp_boundary/no_std"]
assertable_node_kind = []
vecdeque_node_queue = ["vecdeque_attacher_collection"]
vecdeque_attacher_collection = []
